// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div>
    SHOW ME
  </div>
  <button
    onClick={[Function]}
  >
    Click me and I disappear
  </button>
</div>
`;

exports[`should hide the div 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Click me and I disappear
  </button>
</div>
`;
